k8/central-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-deployment 
spec:
  selector:
    matchLabels:
      app: central 
  template:
    metadata:
      labels:
        app: central
    spec:
      containers:
      - name: central
        image: filipmilo/central
        ports:
        - containerPort: 3000
          name: central-port
      - name: mongodb-central
        image: mongo
        volumeMounts:
          - mountPath: app/central
            name: central-volume
        ports:
        - containerPort: 27017
      volumes:
        - name: central-volume
          persistentVolumeClaim:
            claimName: host-pvc
