k8/lib1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lib1-deployment 
spec:
  selector:
    matchLabels:
      app: lib1 
  template:
    metadata:
      labels:
        app: lib1
    spec:
      containers:
      - name: library1
        image: filipmilo/lib1
        ports:
        - containerPort: 8000
      - name: mongodb-1
        image: mongo
        ports:
        - containerPort: 27017
