k8/lib2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lib2-deployment 
spec:
  selector:
    matchLabels:
      app: lib2
  template:
    metadata:
      labels:
        app: lib2
    spec:
      containers:
      - name: library2
        image: filipmilo/lib2:prod
        ports:
        - containerPort: 8000
          name: lib2-port
      - name: mongodb-2
        image: mongo
        volumeMounts:
          - mountPath: app/lib2
            name: lib2-volume
        ports:
        - containerPort: 27017
      volumes:
        - name: lib2-volume
          persistentVolumeClaim: 
            claimName: host-pvc
