k8/lib3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lib3-deployment 
spec:
  selector:
    matchLabels:
      app: lib3
  template:
    metadata:
      labels:
        app: lib3
    spec:
      containers:
      - name: library3
        image: filipmilo/lib3
        ports:
        - containerPort: 8000
      - name: mongodb-3
        image: mongo
        ports:
        - containerPort: 27017
