k8/central-service.yml
apiVersion: v1
kind: Service
metadata:
  name: central-service 
spec:
  selector:
    app: central
  ports:
    - protocol: TCP
      port: 3000
      targetPort: central-port
