k8/lib1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lib1-service 
spec:
  selector:
    app: lib1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: lib1-port
