k8/lib3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lib3-service 
spec:
  selector:
    app: lib3
  ports:
    - protocol: TCP
      port: 8000
      targetPort: lib3-port
