k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway 
  labels:
    name: gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lib1.library.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lib1-service
            port:
              number: 8000
  - host: lib2.library.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lib2-service
            port:
              number: 8000
  - host: lib3.library.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lib3-service
            port:
              number: 8000
